<resources>
<!--    System-->
    <string name="app_name">QR Reader</string>
    <string name="file_provider">FileProvider</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.taetae98.qrreader</string>


<!--    Word-->
    <string name="scan">Scan</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="generate">Generate</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="internet">Internet</string>
    <string name="tel">Tel</string>
    <string name="wifi">WiFi</string>
    <string name="location">Location</string>
    <string name="text">Text</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="calendar">Calendar</string>
    <string name="message">Message</string>
    <string name="code">Code</string>
    <string name="finish">Finish</string>
    <string name="barcode">Barcode</string>
    <string name="refresh">Refresh</string>
    <string name="close">Close</string>
    <string name="format">Format</string>
    <string name="address">Address</string>
    <string name="protocol">Protocol</string>
    <string name="ssid">SSID</string>
    <string name="encryption">Encryption</string>
    <string name="password">Password</string>
    <string name="hidden">Hidden</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="action">Action</string>
    <string name="map">Map</string>

<!--    String-->
    <string name="share_image">Share Image</string>
    <string name="copy_image">Copy Image</string>
    <string name="share_code">Share Code</string>
    <string name="copy_code">Copy Code</string>
    <string name="print_image">Print Image</string>
    <string name="my_location">My Location</string>
    <string name="loading_location">Loading Location</string>
    <string name="tel_number">Tel Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="personal_tel_number">Tel Number (Personal) </string>
    <string name="mobile_tel_number">Tel Number (Mobile)</string>
    <string name="personal_email">Email (Personal)</string>
    <string name="web_site">Web Site</string>
    <string name="company">Company</string>
    <string name="company_position">Company Position</string>
    <string name="company_tel_number">Tel Number (Company)</string>
    <string name="company_email">Email (Company)</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="all_day">All Day</string>
    <string name="begin_date">Begin Date</string>
    <string name="begin_time">Begin Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="content">Content</string>
    <string name="bookmark">Bookmark</string>
    <string name="save_image">Save Image</string>
    <string name="log">Log</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
</resources>