<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/scanFragment"
        android:icon="@drawable/ic_round_qr_code_scanner_24"
        android:title="@string/scan"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/generateFragment"
        android:icon="@drawable/ic_round_qr_code_24"
        android:title="@string/generate"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_round_history_24"
        android:title="@string/history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/setting"
        app:showAsAction="ifRoom"/>
</menu>