<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main.xml"
    app:startDestination="@id/scanFragment">

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.taetae98.qrreader.fragment.ScanFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scan" />
    <fragment
        android:id="@+id/generateFragment"
        android:name="com.taetae98.qrreader.fragment.GenerateFragment"
        android:label="@string/generate"
        tools:layout="@layout/fragment_generate"/>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.taetae98.qrreader.fragment.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history"/>
</navigation>