<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <import type="com.taetae98.qrreader.enums.WiFiEncryption" />

        <variable
            name="barcodeViewModel"
            type="com.taetae98.qrreader.viewmodel.BarcodeViewModel" />

        <variable
            name="wifiViewModel"
            type="com.taetae98.qrreader.viewmodel.WiFiViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="?attr/colorOnPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.QRReader.TextInputLayout.FilledBox"
            android:id="@+id/code_input_layout"
            android:hint="@string/ssid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:text="@={wifiViewModel.ssid}"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.QRReader.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:id="@+id/encryption_input_layout"
            android:hint="@string/encryption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/code_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.QRReader.TextInputLayout.FilledBox"
            android:id="@+id/password_input_layout"
            android:hint="@string/password"
            android:visibility="@{wifiViewModel.encryption == WiFiEncryption.NONE ? View.GONE : View.VISIBLE}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/encryption_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:text="@={wifiViewModel.password}"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/hidden_checkbox"
            android:checked="@={wifiViewModel.hidden}"
            android:text="@string/hidden"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.taetae98.qrreader.view.BarcodeView
            android:id="@+id/barcode_view"
            android:foreground="?attr/selectableItemBackground"
            app:barcode="@{barcodeViewModel.barcode}"
            app:format="@{barcodeViewModel.format}"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="50dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/hidden_checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>